samples/_failures_safe/1761479449_6a9455_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51fe8107.c: In function ‘main’:
./samples/SAFE/__tmp_51fe8107.c:142:5: error: expected declaration or statement at end of input
  142 |     if (compressed_size == 0) {
      |     ^~
./samples/SAFE/__tmp_51fe8107.c:142:5: error: expected declaration or statement at end of input
